Use personal dependencies

--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "escape-latex": "^0.1.2",
     "extend": "^3.0.0",
     "fresca": "~0.6.0",
-    "fresh-jrs-converter": "^0.2.2",
+    "fresh-jrs-converter": "gregcarlin/fresh-jrs-converter",
     "fresh-resume-starter": "^0.2.2",
-    "fresh-themes": "^0.15.1-beta",
+    "fresh-themes": "gregcarlin/fresh-themes",
     "fs-extra": "^0.26.4",
     "handlebars": "^4.0.5",
     "html": "0.0.10",
