--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "escape-latex": "^0.1.2",
     "extend": "^3.0.0",
     "fresca": "~0.6.0",
-    "fresh-jrs-converter": "gregcarlin/fresh-jrs-converter",
+    "fresh-jrs-converter": "github:gregcarlin/fresh-jrs-converter",
     "fresh-resume-starter": "^0.2.2",
-    "fresh-themes": "gregcarlin/fresh-themes",
+    "fresh-themes": "github:gregcarlin/fresh-themes",
     "fs-extra": "^0.26.4",
     "handlebars": "^4.0.5",
     "html": "0.0.10",
-    "is-my-json-valid": "^2.12.4",
+    "is-my-json-valid": "^2.16.1",
     "json-lint": "^0.1.0",
     "jsonlint": "^1.6.2",
     "lodash": "^3.10.1",
