--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "lodash": "^3.10.1",
     "marked": "^0.3.5",
     "mkdirp": "^0.5.1",
-    "moment": "^2.11.1",
+    "moment": "^2.19.0",
     "parse-filepath": "^0.6.3",
     "path-exists": "^2.1.0",
     "pinkie-promise": "^2.0.0",
@@ -100,7 +100,7 @@
     "jsonresume-theme-classy": "^1.0.9",
     "jsonresume-theme-modern": "0.0.18",
     "jsonresume-theme-sceptile": "^1.0.5",
-    "mocha": "*",
+    "mocha": "^4.0.1",
     "resample": "fluentdesk/resample",
     "stripcolorcodes": "^0.1.0"
   }
